--- a/Views/SettingsView.xaml
+++ b/Views/SettingsView.xaml
@@ -4,113 +4,91 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:MiddleBooth.Views">
 
-    <Grid Background="White" Margin="20">
+    <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
-
-        <!-- Title -->
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="2"
-                   Text="Settings" 
+        <!-- Header -->
+        <TextBlock Grid.Row="0" 
+                   Text="Pengaturan" 
                    FontSize="36" 
                    FontWeight="Bold" 
                    Foreground="MediumSeaGreen" 
-                   Margin="0,0,0,20"/>
+                   HorizontalAlignment="Center"
+                   Margin="0,30,0,20"/>
 
-        <!-- DSLR Booth Path -->
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="DSLR Booth Path" FontSize="18" VerticalAlignment="Center" Margin="0,10"/>
-        <Grid Grid.Row="1" Grid.Column="1" Margin="0,5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <TextBox Grid.Column="0" Text="{Binding DSLRBoothPath}" 
-                     FontSize="16" 
-                     Background="PaleTurquoise" 
-                     Foreground="Black" 
-                     Padding="5" 
-                     VerticalAlignment="Center"/>
-            <Button Grid.Column="1" Content="Pilih" 
-                    Command="{Binding BrowseDSLRBoothPathCommand}" 
-                    Style="{StaticResource LargeButtonStyle}" 
-                    Width="80" 
-                    Height="30" 
-                    Margin="10,0,0,0"/>
-        </Grid>
+        <!-- Main Content -->
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+            <StackPanel Margin="40,0">
+                <!-- DSLR Booth Path -->
+                <TextBlock Text="DSLR Booth Path" FontSize="18" Margin="0,20,0,5"/>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox Grid.Column="0" Text="{Binding DSLRBoothPath}" 
+                             FontSize="16" 
+                             Padding="10" 
+                             Margin="0,0,10,0"/>
+                    <Button Grid.Column="1" Content="Pilih" 
+                            Command="{Binding BrowseDSLRBoothPathCommand}" 
+                            Style="{StaticResource LargeButtonStyle}" 
+                            Width="100" 
+                            Height="40"/>
+                </Grid>
 
-        <!-- Payment Gateway URL -->
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="Payment Gateway URL" FontSize="18" VerticalAlignment="Center" Margin="0,10"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding PaymentGatewayUrl}" 
-                 FontSize="16" 
-                 Background="PaleTurquoise" 
-                 Foreground="Black" 
-                 Padding="5" 
-                 VerticalAlignment="Center"/>
+                <!-- Payment Gateway URL -->
+                <TextBlock Text="Payment Gateway URL" FontSize="18" Margin="0,20,0,5"/>
+                <TextBox Text="{Binding PaymentGatewayUrl}" 
+                         FontSize="16" 
+                         Padding="10"/>
 
-        <!-- Service Price -->
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="Service Price" FontSize="18" VerticalAlignment="Center" Margin="0,10"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding ServicePrice}" 
-                 FontSize="16" 
-                 Background="PaleTurquoise" 
-                 Foreground="Black" 
-                 Padding="5" 
-                 VerticalAlignment="Center"/>
+                <!-- Service Price -->
+                <TextBlock Text="Harga Layanan" FontSize="18" Margin="0,20,0,5"/>
+                <TextBox Text="{Binding ServicePrice}" 
+                         FontSize="16" 
+                         Padding="10"/>
 
-        <!-- Application PIN -->
-        <TextBlock Grid.Row="4" Grid.Column="0" Text="Application PIN" FontSize="18" VerticalAlignment="Center" Margin="0,10"/>
-        <PasswordBox Grid.Row="4" Grid.Column="1" PasswordChanged="PasswordBox_PasswordChanged"
-                     FontSize="16" 
-                     Background="PaleTurquoise" 
-                     Foreground="Black" 
-                     Padding="5" 
-                     VerticalAlignment="Center"/>
+                <!-- Application PIN -->
+                <TextBlock Text="PIN Aplikasi" FontSize="18" Margin="0,20,0,5"/>
+                <PasswordBox PasswordChanged="PasswordBox_PasswordChanged"
+                             FontSize="16" 
+                             Padding="10"/>
 
-        <!-- Midtrans Server Key -->
-        <TextBlock Grid.Row="5" Grid.Column="0" Text="Midtrans Server Key" FontSize="18" VerticalAlignment="Center" Margin="0,10"/>
-        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding MidtransServerKey}" 
-                 FontSize="16" 
-                 Background="PaleTurquoise" 
-                 Foreground="Black" 
-                 Padding="5" 
-                 VerticalAlignment="Center"/>
+                <!-- Midtrans Server Key -->
+                <TextBlock Text="Midtrans Server Key" FontSize="18" Margin="0,20,0,5"/>
+                <TextBox Text="{Binding MidtransServerKey}" 
+                         FontSize="16" 
+                         Padding="10"/>
 
-        <!-- Production Mode -->
-        <CheckBox Grid.Row="6" Grid.Column="1" Content="Production Mode" 
-                  IsChecked="{Binding IsProduction}" 
-                  FontSize="16" 
-                  Margin="0,10" 
-                  Background="LightSkyBlue" 
-                  Foreground="Black" 
-                  Padding="5"/>
+                <!-- Production Mode -->
+                <CheckBox Content="Mode Produksi" 
+                          IsChecked="{Binding IsProduction}" 
+                          FontSize="18" 
+                          Margin="0,20,0,0"/>
+            </StackPanel>
+        </ScrollViewer>
 
-        <!-- Save and Back Buttons -->
-        <StackPanel Grid.Row="7" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="20,30,0,0">
+        <!-- Footer -->
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,30">
             <Button Command="{Binding SaveSettingsCommand}" 
-                    Content="Save" 
+                    Content="Simpan" 
                     Style="{StaticResource LargeButtonStyle}" 
                     Background="MediumSeaGreen" 
-                    Width="120" 
-                    Height="40" 
+                    Width="150" 
+                    Height="50" 
                     Margin="0,0,20,0"/>
 
             <Button Command="{Binding BackCommand}" 
-                    Content="Back" 
+                    Content="Kembali" 
                     Style="{StaticResource LargeButtonStyle}" 
                     Background="Tomato" 
-                    Width="120" 
-                    Height="40"/>
+                    Width="150" 
+                    Height="50"/>
         </StackPanel>
     </Grid>
 </UserControl>
