--- a/Views/VoucherPaymentPage.xaml
+++ b/Views/VoucherPaymentPage.xaml
@@ -4,32 +4,67 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:MiddleBooth.Views">
     <Grid Background="White">
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20">
-            <TextBlock Text="Enter Voucher Code" 
-                       FontSize="24" 
-                       FontWeight="Bold" 
-                       Foreground="MediumSeaGreen" 
-                       Margin="0,0,0,20"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-            <TextBox Text="{Binding VoucherCode}" 
-                     FontSize="18" 
-                     Width="250" 
-                     Margin="0,0,0,20"/>
+        <!-- Header -->
+        <TextBlock Grid.Row="0" 
+                   Text="Pembayaran Voucher" 
+                   FontSize="32" 
+                   FontWeight="Bold" 
+                   Foreground="MediumSeaGreen" 
+                   HorizontalAlignment="Center"
+                   Margin="0,30,0,20"/>
 
-            <Button Content="Validate Voucher" 
-                    Command="{Binding ValidateVoucherCommand}" 
-                    Style="{StaticResource LargeButtonStyle}" 
-                    Width="200" Height="50" Margin="0,20"/>
+        <!-- Main Content -->
+        <Border Grid.Row="1" 
+                BorderBrush="LightGray" 
+                BorderThickness="1" 
+                CornerRadius="10" 
+                Padding="30" 
+                Margin="20,0">
+            <StackPanel VerticalAlignment="Center">
+                <TextBlock Text="Masukkan Kode Voucher" 
+                           FontSize="20" 
+                           FontWeight="SemiBold" 
+                           Foreground="DarkSlateGray" 
+                           HorizontalAlignment="Center"
+                           Margin="0,0,0,20"/>
 
-            <TextBlock Text="{Binding ValidationResult}" 
-                       FontSize="20" 
-                       Foreground="DarkGray" 
-                       Margin="0,20"/>
+                <TextBox Text="{Binding VoucherCode}" 
+                         FontSize="24" 
+                         Width="300"
+                         Height="50"
+                         VerticalContentAlignment="Center"
+                         HorizontalContentAlignment="Center"
+                         Margin="0,0,0,30"/>
 
-            <Button Content="Back to Payment Options" 
-                    Command="{Binding BackCommand}" 
-                    Style="{StaticResource LargeButtonStyle}" 
-                    Width="200" Height="50" Margin="0,30"/>
-        </StackPanel>
+                <Button Content="Validasi Voucher" 
+                        Command="{Binding ValidateVoucherCommand}" 
+                        Style="{StaticResource LargeButtonStyle}" 
+                        Width="250" 
+                        Height="60" 
+                        Margin="0,0,0,20"/>
+
+                <TextBlock Text="{Binding ValidationResult}" 
+                           FontSize="18" 
+                           FontWeight="SemiBold"
+                           Foreground="{Binding ValidationResultColor}"
+                           TextAlignment="Center"
+                           Margin="0,10"/>
+            </StackPanel>
+        </Border>
+
+        <!-- Footer -->
+        <Button Grid.Row="2" 
+                Content="Kembali" 
+                Command="{Binding BackCommand}" 
+                Style="{StaticResource LargeButtonStyle}" 
+                Width="200" 
+                Height="50" 
+                Margin="0,20,0,30"/>
     </Grid>
 </UserControl>
