--- a/Views/SettingsView.xaml
+++ b/Views/SettingsView.xaml
@@ -35,77 +35,124 @@
 
         <!-- Main Content -->
         <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
-            <StackPanel Margin="40,0">
-                <!-- DSLR Booth Path -->
-                <TextBlock Text="DSLR Booth Path" FontSize="18" Margin="0,20,0,5"/>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBox Grid.Column="0" Text="{Binding DSLRBoothPath}" 
-                             FontSize="16" 
-                             Padding="10" 
-                             Margin="0,0,10,0"/>
-                    <Button Grid.Column="1" Content="Pilih" 
-                            Command="{Binding BrowseDSLRBoothPathCommand}" 
-                            Style="{StaticResource LargeButtonStyle}" 
-                            Width="100" 
-                            Height="40"/>
-                </Grid>
+            <Grid Margin="20,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-                <!-- Payment Gateway URL -->
-                <TextBlock Text="Payment Gateway URL" FontSize="18" Margin="0,20,0,5"/>
-                <TextBox Text="{Binding PaymentGatewayUrl}" 
-                         FontSize="16" 
-                         Padding="10"/>
+                <!-- Left Column -->
+                <StackPanel Grid.Column="0" Margin="10">
+                    <GroupBox Header="Aplikasi" Margin="0,0,0,20">
+                        <StackPanel>
+                            <TextBlock Text="DSLR Booth Path" FontSize="14" Margin="0,10,0,5"/>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBox Grid.Column="0" Text="{Binding DSLRBoothPath}" 
+                                         FontSize="12" 
+                                         Padding="5" 
+                                         Margin="0,0,10,0"/>
+                                <Button Grid.Column="1" Content="Pilih" 
+                                        Command="{Binding BrowseDSLRBoothPathCommand}" 
+                                        Width="60" 
+                                        Height="30"/>
+                            </Grid>
 
-                <!-- Service Price -->
-                <TextBlock Text="Harga Layanan" FontSize="18" Margin="0,20,0,5"/>
-                <TextBox Text="{Binding ServicePrice}" 
-                         FontSize="16" 
-                         Padding="10"/>
+                            <TextBlock Text="PIN Aplikasi" FontSize="14" Margin="0,10,0,5"/>
+                            <PasswordBox PasswordChanged="PasswordBox_PasswordChanged"
+                                         FontSize="12" 
+                                         Padding="5"/>
+                        </StackPanel>
+                    </GroupBox>
 
-                <!-- Application PIN -->
-                <TextBlock Text="PIN Aplikasi" FontSize="18" Margin="0,20,0,5"/>
-                <PasswordBox PasswordChanged="PasswordBox_PasswordChanged"
-                             FontSize="16" 
-                             Padding="10"/>
+                    <GroupBox Header="Pembayaran" Margin="0,0,0,20">
+                        <StackPanel>
+                            <TextBlock Text="Payment Gateway URL" FontSize="14" Margin="0,10,0,5"/>
+                            <TextBox Text="{Binding PaymentGatewayUrl}" 
+                                     FontSize="12" 
+                                     Padding="5"/>
 
-                <!-- Midtrans Server Key -->
-                <TextBlock Text="Midtrans Server Key" FontSize="18" Margin="0,20,0,5"/>
-                <TextBox Text="{Binding MidtransServerKey}" 
-                         FontSize="16" 
-                         Padding="10"/>
+                            <TextBlock Text="Harga Layanan" FontSize="14" Margin="0,10,0,5"/>
+                            <TextBox Text="{Binding ServicePrice}" 
+                                     FontSize="12" 
+                                     Padding="5"/>
+                        </StackPanel>
+                    </GroupBox>
+                </StackPanel>
 
-                <!-- Odoo Server -->
-                <TextBlock Text="Odoo Server" FontSize="18" Margin="0,20,0,5"/>
-                <TextBox Text="{Binding OdooServer}" 
-                         FontSize="16" 
-                         Padding="10"/>
+                <!-- Middle Column -->
+                <StackPanel Grid.Column="1" Margin="10">
+                    <GroupBox Header="Midtrans" Margin="0,0,0,20">
+                        <StackPanel>
+                            <TextBlock Text="Midtrans Server Key" FontSize="14" Margin="0,10,0,5"/>
+                            <TextBox Text="{Binding MidtransServerKey}" 
+                                     FontSize="12" 
+                                     Padding="5"/>
 
-                <!-- Odoo Username -->
-                <TextBlock Text="Odoo Username" FontSize="18" Margin="0,20,0,5"/>
-                <TextBox Text="{Binding OdooUsername}" 
-                         FontSize="16" 
-                         Padding="10"/>
+                            <CheckBox Content="Mode Produksi" 
+                                      IsChecked="{Binding IsProduction}" 
+                                      FontSize="14" 
+                                      Margin="0,10,0,0"/>
+                        </StackPanel>
+                    </GroupBox>
 
-                <!-- Odoo Password -->
-                <TextBlock Text="Odoo Password" FontSize="18" Margin="0,20,0,5"/>
-                <PasswordBox PasswordChanged="OdooPasswordBox_PasswordChanged"
-                             FontSize="16" 
-                             Padding="10"/>
-                <TextBlock Text="Odoo Database" FontSize="18" Margin="0,20,0,5"/>
-                <TextBox Text="{Binding OdooDatabase}" 
-                         FontSize="16" 
-                         Padding="10"/>
+                    <GroupBox Header="MQTT" Margin="0,0,0,20">
+                        <StackPanel>
+                            <TextBlock Text="MQTT Host" FontSize="14" Margin="0,10,0,5"/>
+                            <TextBox Text="{Binding MqttHost}" 
+                                     FontSize="12" 
+                                     Padding="5"/>
 
-                <!-- Production Mode -->
-                <CheckBox Content="Mode Produksi" 
-                          IsChecked="{Binding IsProduction}" 
-                          FontSize="18" 
-                          Margin="0,20,0,0"/>
-            </StackPanel>
+                            <TextBlock Text="MQTT Port" FontSize="14" Margin="0,10,0,5"/>
+                            <TextBox Text="{Binding MqttPort}" 
+                                     FontSize="12" 
+                                     Padding="5"/>
+
+                            <TextBlock Text="MQTT Username" FontSize="14" Margin="0,10,0,5"/>
+                            <TextBox Text="{Binding MqttUsername}" 
+                                     FontSize="12" 
+                                     Padding="5"/>
+
+                            <TextBlock Text="MQTT Password" FontSize="14" Margin="0,10,0,5"/>
+                            <PasswordBox x:Name="MqttPasswordBox"
+                                         FontSize="12" 
+                                         Padding="5"
+                                         PasswordChanged="MqttPasswordBox_PasswordChanged"/>
+                        </StackPanel>
+                    </GroupBox>
+                </StackPanel>
+
+                <!-- Right Column -->
+                <StackPanel Grid.Column="2" Margin="10">
+                    <GroupBox Header="Odoo" Margin="0,0,0,20">
+                        <StackPanel>
+                            <TextBlock Text="Odoo Server" FontSize="14" Margin="0,10,0,5"/>
+                            <TextBox Text="{Binding OdooServer}" 
+                                     FontSize="12" 
+                                     Padding="5"/>
+
+                            <TextBlock Text="Odoo Username" FontSize="14" Margin="0,10,0,5"/>
+                            <TextBox Text="{Binding OdooUsername}" 
+                                     FontSize="12" 
+                                     Padding="5"/>
+
+                            <TextBlock Text="Odoo Password" FontSize="14" Margin="0,10,0,5"/>
+                            <PasswordBox PasswordChanged="OdooPasswordBox_PasswordChanged"
+                                         FontSize="12" 
+                                         Padding="5"/>
+
+                            <TextBlock Text="Odoo Database" FontSize="14" Margin="0,10,0,5"/>
+                            <TextBox Text="{Binding OdooDatabase}" 
+                                     FontSize="12" 
+                                     Padding="5"/>
+                        </StackPanel>
+                    </GroupBox>
+                </StackPanel>
+            </Grid>
         </ScrollViewer>
 
         <!-- Footer -->
